css/main.css
html, body {
	margin:0;
	padding:0;
	height:100%;
	background:lightblue;
}

ul {
	overflow:auto;
	margin:0;
	padding:20px 0 0 20px;
	height:100%;
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	box-sizing:border-box;
}
ul li {
	display:block;
	width:200px;
	height:200px;
	float:left;
	border:1px solid black;
	background:lightgreen;
	margin:0 20px 20px 0;
	position:absolute;
}
ul li.dragged {
	z-index:100;
	background:pink;
}

